--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
   "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.0",
     "nodemon": "^3.1.10"
   }
